[package]
name = "anti-hash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
bigdecimal = "*"
wasm-bindgen = "*"
web-sys = { version = "*", features = [
    "console",
    "Document",
    "Element",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlInputElement",
    "Event",
    "Node",
    "Window",
] }
