[package]
name = "anti-hash"
authors = ["Heltion"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
bigdecimal = "*"
wasm-bindgen = "*"
web-sys = { version = "*", features = [
    "console",
    "CssStyleDeclaration",
    "Document",
    "DateTimeValue",
    "Element",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "Event",
    "Node",
    "Window",
] }
